--- a/dotnet/minadotnet/minadotnet.csproj
+++ b/dotnet/minadotnet/minadotnet.csproj
@@ -74,6 +74,10 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\xmscommon\lib\log4net\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -87,6 +91,7 @@
   <ItemGroup>
     <Compile Include="jpmorgan\mina\common\BufferOverflowException.cs" />
     <Compile Include="jpmorgan\mina\common\BufferUnderflowException.cs" />
+    <Compile Include="jpmorgan\mina\common\HandlerAdapter.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageDecoder.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\MessageDecoderResult.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\IProtocolDecoderOutput.cs" />
