Added support for XML to amq_shell

--- a/kernel/custom.cfg
+++ b/kernel/custom.cfg
@@ -1,25 +1,59 @@
-<?xml?>
+<?xml version="1.0"?>
 <config>
+    <server
+        port = "5672"
+        background = "0"
+        context_timeout = "5"
+        queue_timeout = "1"/>
     <verbosity
-        trace_queue = "0"
+        trace_login = "0"
         trace_route = "0"
-        trace_cluster = "0"
-        />
+        trace_queue = "0"
+        trace_cluster = "0"/>
     <resources
         max_memory_mb = "100"
         queue_limit = "100000"
         monitor = "1"
         dump_state = "30"
-        />
+        recycler = "1"
+        trace = "0"/>
+    <logging
+        directory = "logs"
+        console = "console.log"/>
     <tuning
         packio = "1"
         read_timeout = "30"
-        write_timeout = "30"
-        />
+        write_timeout = "30"/>
     <cluster
-        heartbeat = "5"
-        >
-        <server name = "cluster-001" host = "localhost:5001" primary = "1" />
-        <server name = "cluster-002" host = "localhost:5002" backup = "1" />
+        vhost = "/"
+        host = ""
+        state_mb = "250"
+        heartbeat = "5">
+        <server
+            name = "cluster-001"
+            host = "localhost:5001"
+            primary = "1"/>
+        <server
+            name = "cluster-002"
+            host = "localhost:5002"
+            backup = "1"/>
     </cluster>
+    <internal
+        auto_crash = "0"
+        auto_block = "0"/>
+    <security
+        name = "plain">
+        <user
+            name = "guest"
+            password = "guest"
+            type = "normal"/>
+        <user
+            name = "cluster"
+            password = "cluster"
+            type = "cluster"/>
+        <user
+            name = "console"
+            password = "console"
+            type = "console"/>
+    </security>
 </config>
