--- a/dotnet/xmsclient/xmsclient.csproj
+++ b/dotnet/xmsclient/xmsclient.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Client\State\Listener\ConnectionCloseOkListener.cs" />
     <Compile Include="Client\State\Listener\SpecificMethodFrameListener.cs" />
     <Compile Include="Client\State\StateWaiter.cs" />
+    <Compile Include="Client\Transport\AMQProtocolProvider.cs" />
     <Compile Include="Client\Transport\TransportConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XMS\ChannelLimitReachedException.cs" />
