--- a/dotnet/minadotnet/minadotnet.csproj
+++ b/dotnet/minadotnet/minadotnet.csproj
@@ -93,11 +93,22 @@
     <Compile Include="jpmorgan\mina\common\BufferUnderflowException.cs" />
     <Compile Include="jpmorgan\mina\common\HandlerAdapter.cs" />
     <Compile Include="jpmorgan\mina\common\IoHandlerAdapter.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\CumulativeProtocolDecoder.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\DemuxingProtocolCodecFactory.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageDecoder.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageDecoderFactory.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageEncoder.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageEncoderFactory.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\MessageDecoderResult.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\IProtocolCodecFactory.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\IProtocolDecoder.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\IProtocolDecoderOutput.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\IProtocolEncoder.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\IProtocolEncoderOutput.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\ProtocolCodecException.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\ProtocolDecoderAdapter.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\ProtocolDecoderException.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\ProtocolEncoderException.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\DemuxingIoHandler.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\IMessageHandler.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\UnknownMessageTypeException.cs" />
