--- a/dotnet/minadotnet/minadotnet.csproj
+++ b/dotnet/minadotnet/minadotnet.csproj
@@ -91,8 +91,13 @@
   <ItemGroup>
     <Compile Include="jpmorgan\mina\common\BufferOverflowException.cs" />
     <Compile Include="jpmorgan\mina\common\BufferUnderflowException.cs" />
+    <Compile Include="jpmorgan\mina\common\ByteBufferProxy.cs" />
+    <Compile Include="jpmorgan\mina\common\FilterAdapter.cs" />
+    <Compile Include="jpmorgan\mina\common\HeapByteBuffer.cs" />
     <Compile Include="jpmorgan\mina\common\HandlerAdapter.cs" />
     <Compile Include="jpmorgan\mina\common\IoHandlerAdapter.cs" />
+    <Compile Include="jpmorgan\mina\common\RefCountingByteBuffer.cs" />
+    <Compile Include="jpmorgan\mina\common\support\ByteBufferHexDumper.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\CumulativeProtocolDecoder.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\DemuxingProtocolCodecFactory.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\demux\IMessageDecoder.cs" />
@@ -106,9 +111,12 @@
     <Compile Include="jpmorgan\mina\filter\codec\IProtocolEncoder.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\IProtocolEncoderOutput.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\ProtocolCodecException.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\ProtocolCodecFilter.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\ProtocolDecoderAdapter.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\ProtocolDecoderException.cs" />
     <Compile Include="jpmorgan\mina\filter\codec\ProtocolEncoderException.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\support\SimpleProtocolDecoderOutput.cs" />
+    <Compile Include="jpmorgan\mina\filter\codec\support\SimpleProtocolEncoderOutput.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\DemuxingIoHandler.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\IMessageHandler.cs" />
     <Compile Include="jpmorgan\mina\handler\demux\UnknownMessageTypeException.cs" />
