--- a/dotnet/xmsclienttests/xmsclienttests.csproj
+++ b/dotnet/xmsclienttests/xmsclienttests.csproj
@@ -28,6 +28,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IBM.XMS, Version=1.1.1.1, Culture=neutral, PublicKeyToken=d2666ab12fca862b" />
+    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\xmscommon\lib\log4net\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -35,6 +40,17 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="requestreply1\ServiceProvidingClient.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\xmsclient\xmsclient.csproj">
+      <Project>{68987C05-3768-452C-A6FC-6BA1D372852F}</Project>
+      <Name>xmsclient</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\xmscommon\xmscommon.csproj">
+      <Project>{77064C42-24D2-4CEB-9EA2-0EF481A43205}</Project>
+      <Name>xmscommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
