--- a/dotnet/xmsclienttests/xmsclienttests.csproj
+++ b/dotnet/xmsclienttests/xmsclienttests.csproj
@@ -5,11 +5,12 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BA1B0032-4CE6-40DD-A2DC-119F0FFA0A1D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JPMorgan.XMS</RootNamespace>
     <AssemblyName>xmsclienttests</AssemblyName>
-    <StartupObject>JPMorgan.XMS.RequestReply1.ServiceProvidingClient</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,15 +35,22 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\xmscommon\lib\log4net\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=2.2.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="requestreply1\BaseMessagingTestFixture.cs" />
     <Compile Include="requestreply1\ServiceProvidingClient.cs" />
+    <Compile Include="requestreply1\ServiceRequestingClient.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\minadotnet\minadotnet.csproj">
+      <Project>{E6EED856-9650-439F-BB81-F35A2C0F8AB8}</Project>
+      <Name>minadotnet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\xmsclient\xmsclient.csproj">
       <Project>{68987C05-3768-452C-A6FC-6BA1D372852F}</Project>
       <Name>xmsclient</Name>
