AMQ-308 and AMQ-375 fixes from Pieter

--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -26,26 +26,26 @@
     </cluster>
     -->
 
-    <!-- These are the default queue profiles
-
+    <!-- These are default queue profiles:
          Valid actions are:
             warn - send message to alert log
             drop - drop the message
             trim - remove old messages from queue
-            kill - kill the connection and queue (not yet implemented)
+            kill - kill the connection and queue
 
-         The order of queue limits is important.
+         Note that if you define a drop/trim action, the queue will never
+         grow larger than the specified limit.
+
+         Please define limits in ascending order.
       -->
     <queue_profile name = "private">
-        <limit value = "5000"  action = "warn" />
-        <limit value = "10000" action = "trim" />
-        <limit value = "20000" action = "kill" />
+        <limit name = "warn" value = "1000"  />
+        <limit name = "trim" value = "10000" />
     </queue_profile>
 
     <queue_profile name = "shared">
-        <limit value = "5000"  action = "warn" />
-        <limit value = "10000" action = "trim" />
-        <limit value = "20000" action = "kill" />
+        <limit name = "warn" value = "1000"  />
+        <limit name = "kill" value = "10000" />
     </queue_profile>
 
     <!-- These are the default passwords -->
