--- a/dotnet/xmsclienttests/log4net.config
+++ b/dotnet/xmsclienttests/log4net.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
+<!--<?xml version="1.0" encoding="utf-8" ?>-->
+<!--<configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
+  </configSections>-->
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+        <conversionPattern value="%d [%t] %-5p %c:%M(%L) - %m%n" />
       </layout>
     </appender>
     <root>
@@ -14,4 +14,4 @@
       <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
-</configuration>
+<!--</configuration>-->
