Removed redundant search method from exchamge object

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -14,17 +14,17 @@
 
         Run "amq_server --help" for options help.
 
+        <server name = "cluster-003" host = "localhost:5002"  />
+    -->
     <cluster
         vhost = "/"
         host = ""
         state_mb = "250"
         heartbeat = "5"
         >
-        <server name = "cluster-001" host = "address:port" primary = "1" />
-        <server name = "cluster-002" host = "address:port" backup = "1" />
-        <server name = "cluster-003" host = "address:port" />
+        <server name = "cluster-001" host = "si200505:5001" primary = "1" />
+        <server name = "cluster-002" host = "si200505:5002" backup = "1" />
     </cluster>
-    -->
 
     <!-- These are default queue profiles:
          Valid actions are:
