--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -19,7 +19,7 @@
     <!-- Sample cluster configuration
         - The vhost must be the same as used by applications at connect time
         - The internal address, if specified, is used for intra-cluster work
-        - The host address is told to clients
+        - The host address is provided to clients
     <cluster
         vhost = "/"
         heartbeat = "5"
